--- a/index.html
+++ b/index.html
@@ -3,55 +3,29 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Training Check-off & Weight Tracker</title>
-  <meta name="theme-color" content="#0b1220" />
+  <title>🏃 Training Check-off & Weight Tracker</title>
+  <meta name="theme-color" content="#f6f9ff" />
   <meta name="description" content="Tick each activity and log daily weight (kg). Mobile-friendly.">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="logo">Training Check-off</h1>
-      <nav class="actions">
-        <button id="exportCsvBtn" class="btn ghost">Export CSV</button>
-        <button id="resetBtn" class="btn danger">Reset</button>
-      </nav>
+      <h1 class="logo">🏃 Training Check-off</h1>
     </div>
   </header>
 
   <main class="container">
     <section class="panel">
-      <p class="muted">Plan: <strong>Mon 03 Nov 2025 → Sun 07 Dec 2025 (Weeks 1–5)</strong></p>
-
       <div class="stats">
-        <div><strong id="doneCount">0</strong> / <span id="totalCount">0</span> activities</div>
+        <div><strong id="doneCount">0</strong> / <span id="totalCount">0</span> activities done</div>
         <div>Progress: <strong id="progressPct">0%</strong></div>
         <div>Avg weight: <strong id="avgWeight">—</strong> kg</div>
       </div>
-
       <div class="progress"><div id="progressBar" class="progress-bar"></div></div>
     </section>
 
-    <section>
-      <div class="table-wrap">
-        <table id="planTable">
-          <thead>
-            <tr>
-              <th>Week</th>
-              <th>Date</th>
-              <th>Day</th>
-              <th>Session</th>
-              <th>Workout Details</th>
-              <th>Intensity / HR</th>
-              <th>Purpose</th>
-              <th>Done</th>
-              <th>Weight (kg)</th>
-            </tr>
-          </thead>
-          <tbody><!-- rows injected by script --></tbody>
-        </table>
-      </div>
-    </section>
+    <section id="plan"></section>
   </main>
 
   <footer class="site-footer">
@@ -60,7 +34,6 @@
     </div>
   </footer>
 
-  <!-- cache-bust + defer -->
-  <script defer src="script.js?v=7"></script>
+  <script defer src="script.js?v=10"></script>
 </body>
 </html>
